--- a/Perfume_Store_Activity_Management_Backend/appsettings.json
+++ b/Perfume_Store_Activity_Management_Backend/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DatabaseConnection": "sqlserver://localhost:1433;databaseName=lms;Initial Catalog=lms;Persist Security Info=False;User ID=sa;Password=Lms123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;",
+    "DatabaseConnection": "data source=DoPhu;initial catalog=PerfumeStoreActivityManagement;user id=sa;password=123456;TrustServerCertificate=True;"
+  }
 }
