--- a/PerfumeStoreAPI/appsettings.json
+++ b/PerfumeStoreAPI/appsettings.json
@@ -5,9 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "GoogleClientId": "914623773286-nk6u477dvo33fju92haj5m0cj0sbh2n6.apps.googleusercontent.com",
+  "GoogleClientSecret": "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",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DatabaseConnection": "sqlserver://localhost:1433;databaseName=lms;Initial Catalog=lms;Persist Security Info=False;User ID=sa;Password=Lms123456;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;",
     "DatabaseConnection": "Data Source=SQL6032.site4now.net,1433;Initial Catalog=db_aadac7_login;User Id=db_aadac7_login_admin;Password=dhtp1811;"
   }
 }
