--- a/PerfumeStoreAPI/appsettings.json
+++ b/PerfumeStoreAPI/appsettings.json
@@ -16,7 +16,8 @@
   "Authentication": {
     "Google": {
       "ClientId": "914623773286-nk6u477dvo33fju92haj5m0cj0sbh2n6.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientSecret": "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",
+      "CallbackPath": "/signin-google"
     }
   },
   "AllowedHosts": "*",
